# zenodo-upload

./: .gitignore  .gitmodules  LICENSE  README.md  format.py  pyproject.toml
src/zenodo_upload/: __init__.py
