[project]
name = "zenodo-upload"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Chuyang Chen", email = "chuyangchen2018@outlook.com" }
]
requires-python = ">=3.13"
dependencies = [
    "click>=8.2.1",
    "tqdm>=4.67.1",
    "requests>=2.32.0",
]

[project.scripts]
zenodo-upload = "zenodo_upload:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
